# django-rest-api-docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api-test.http  db.sqlite3  docker-compose.yml  pyproject.toml
joke_api/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
joke_api/migrations/: 0001_initial.py
